[package]
name = "netcom"
version = "0.1.0"
edition = "2021"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
netcom-macros = { workspace = true }
serde = { version="1.0.228", features = [ "derive" ] }
serde_json = "1.0.149"
tokio = { version="1.49.0", optional = true, features = [ "net", "io-util", "macros", "rt-multi-thread" ] }
